Cambios al front end
Reorganización de los controladores angular

--- a/terraba/fe/app/views/formas-pago.html
+++ b/terraba/fe/app/views/formas-pago.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="ControladorFormasPago">
+﻿<div>
     <form class="form-horizontal col-md-12" role="form">
         <div class="form-group">
             <label for="id" class="col-sm-2 control-label">Id</label>
