--- a/terraba/fe/app/views/catalogos.html
+++ b/terraba/fe/app/views/catalogos.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="ControladorCatalogos">
+<div class="container">
     <div class="row">
         <form class="form-horizontal" role="form">
             <div class="form-group">
