--- a/terraba/fe/app/views/registrar-usuario.html
+++ b/terraba/fe/app/views/registrar-usuario.html
@@ -1,38 +1,38 @@
 ﻿<div class="container">
-    <form class="form-horizontal" role="form">
-        <div class="form-group">
+    <form class="form-horizontal" role="form" ng-submit="registrar()" novalidate>
+        <!--<div class="form-group">
             <label for="nombre" class="col-sm-2 control-label">Nombre</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+                <input type="text" class="form-control" id="nombre" placeholder="Nombre" ng-model="usuario.nombre">
             </div>
         </div>
         <div class="form-group">
             <label for="apellidos" class="col-sm-2 control-label">Apellidos</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="apellidos" placeholder="Apellidos">
+                <input type="text" class="form-control" id="apellidos" placeholder="Apellidos" ng-model="usuario.apellidos">
             </div>
-        </div>
+        </div>-->
         <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" placeholder="Correo Electrónico">
+                <input type="email" class="form-control" id="email" placeholder="Correo Electrónico" ng-model="usuario.email">
             </div>
         </div>
         <div class="form-group">
             <label for="contrasena" class="col-sm-2 control-label">Contraseña</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="contrasena" placeholder="Contraseña">
+                <input type="password" class="form-control" id="contrasena" placeholder="Contraseña" ng-model="usuario.password">
             </div>
         </div>
         <div class="form-group">
             <label for="confirmacion" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="confirmacion" placeholder="Confirmación de la contraseña">
+                <input type="password" class="form-control" id="confirmacion" placeholder="Confirmación de la contraseña" ng-model="usuario.confirmPassword">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Crear usuario</button>
+                <input type="submit" class="btn btn-default" value="Guardar"/>
             </div>
         </div>
     </form>
